# wgse-bevy-demo

./: .gitignore  Cargo.toml  build.sh  rustfmt.toml  test_scene.ron
assets/script/: chap01_01.wgs  chap01_02.wgs  init.wgs
src/: main.rs
src/cg/: background.rs  image.rs  main.rs  mod.rs
src/platform/: mod.rs
src/platform/windows/: dpi.rs  mod.rs
src/script/: commands.rs  events.rs  handles.rs  main.rs  mod.rs  parser.rs  resources.rs  runtime.rs
src/system/: buttons.rs  mod.rs  texts.rs
src/text/: main.rs  mod.rs  states.rs  stepped_iterator.rs  texts.rs
src/ui/: components.rs  descriptors.rs  extra_menu.rs  main.rs  main_menu.rs  main_ui.rs  mod.rs  policies.rs  resources.rs  states.rs  system_menu.rs  systems.rs  ui.rs  widget.rs  widgets.rs
src/ui/generic_widget/src/: lib.rs
src/ui/macro/: Cargo.toml
src/ui/macro/src/: lib.rs
wasm/: index.html
wasm/assets/script/: init.wgs
