[package]
name = "wgse_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic_widget = { path = "./src/ui/generic_widget"}
bevy = "0.7.0" # make sure this is the latest version
lazy_static = "1.4.0"
static-rc = "0.5.0"
ghost-cell = "0.2.2"
rand = "0.8.4"
winapi = "0.3.9"
serde = "1.0.89"
serde_json = "1.0"
rayon = "1.5.3"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!