[package]
name = "wgse-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7.0" # make sure this is the latest version
# bevy = { version = "0.7.0", features = [ "dynamic" ] }
console_error_panic_hook = "0.1.7"
lazy_static = "1.4.0"
static-rc = "0.5.0"
ghost-cell = "0.2.2"
rand = "0.8.4"
winapi = "0.3.9"
serde = "1.0.89"
serde_json = "1.0"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!